# path-tracer

./: .gitignore  README.md  path-tracer.cabal  path-tracer.hs
app/: Color.hs  Main.hs  Vec3.hs  Vector.hs
